--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -34,11 +34,33 @@
     .about-header {
         height: 220px;
     }
+    .card-container {
+        margin: 0 10px;
+    }
 }
 
 @media screen and (max-width: 710px) {
     .about-header {
         height: 240px;
+    }
+    .profile-wrap {
+        flex-direction: column;
+        margin-top: 110px;
+    }
+    .card-container {
+        width: 90%;
+        max-width: 450px;
+        display: flex;
+        justify-content: center;
+        border-radius: 30px;
+        margin: 10px 20px 10px 20px;
+        min-width: 325px;
+    }
+    .card-body {
+        width: 80%;
+        margin: 20px 30px;
+        border-radius: 30px;
+        padding: 0;
     }
 }
 
@@ -99,6 +121,9 @@
     }
     .about-paragraph {
         padding: 30px 40px 0 10px;
+    }
+    .project-summary {
+        display: none;
     }
 }
 
@@ -162,6 +187,13 @@
     }
     #logout {
         width: 70px;
+    }
+    .card-body {
+        margin: 20px 15px;
+    }
+    .card-container {
+        margin: 10px 10px;
+        min-width: 0;
     }
 }
 
