--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,3 +142,40 @@
 .about-paragraph {
     padding: 40px 40px 0 20px;
 }
+
+
+
+
+
+
+
+
+/* -- */
+/* -- */
+/* Profile */
+/* -- */
+/* -- */
+.profile-wrap {
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+}
+.card-container {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    border-radius: 30px;
+    margin: 0 20px;
+    min-width: 325px;
+}
+.card-body {
+    width: 80%;
+    margin: 20px 30px;
+    border-radius: 30px;
+    padding: 0;
+}
+.chart {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
