--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,144 +1,146 @@
 
-<div class="flex flex-col w-full lg:flex-row">
+<div class="profile-wrap">
     
-    <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
-        <div class="card w-96 bg-base-100 shadow-xl mt-8 mb-8">
-            <div class="card-body">
-                <div>
-                    <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
-                    {{#if projects.length}}
-                    <div class="overflow-x-auto">
-                      <table class="table w-full">
-                        <!-- head -->
-                        <thead>
-                          <tr>
-                            <th>Name</th>
-                            <th>Delete</th>
-                          </tr>
-                        </thead>
-                        {{#each projects as |project|}}
-                        <tbody>
-                          <tr class="hover">
-                            <th><a href="/project/{{project.id}}" class="basis-3/4">{{project.name}}</a></th>
-                            <td><button data-id="{{project.id}}" class="basis-1/4 project-list">Delete</button></td>
-                          </tr>
-                        </tbody>
-                        {{/each}}
-                      </table>
-                    </div>
-                    {{/if}}
-                </div>
-            </div>
+  <div class="bg-base-300 card-container">
+    <div class="bg-base-100 shadow-xl card-body">
+      <div class="card-body">
+        <div>
+          <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
+          {{#if projects.length}}
+          <div class="overflow-x-auto">
+            <table class="table w-full">
+              <!-- head -->
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Delete</th>
+                </tr>
+              </thead>
+              {{#each projects as |project|}}
+              <tbody>
+                <tr class="hover">
+                  <th><a href="/project/{{project.id}}" class="basis-3/4">{{project.name}}</a></th>
+                  <td><button data-id="{{project.id}}" class="basis-1/4 project-list">Delete</button></td>
+                </tr>
+              </tbody>
+              {{/each}}
+            </table>
+          </div>
+          {{/if}}
         </div>
-    </div>
-
-    <div class="divider">  </div> 
-
-    <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
-        
-        <div class="card w-96 bg-base-100 shadow-xl mt-8 mb-8">
-            <div class="card-body">
-            <h2 class="card-title" style="font-size:28px">Create a new Project</h2>
-            <form class="form-control w-full max-w-xs new-project-form">
-                <label class="label" for="new-project-name">
-                    <span class="label-text">Project Name</span>
-                </label>
-                <input  id="new-project-name" type="text" placeholder="Name of your project" class="input input-bordered text-primary-content input-primary w-full max-w-xs" />
-                <label class="label" for="new-project-description">
-                    <span class="label-text">Description</span>
-                </label>
-                <textarea id="new-project-description" height="50px" class="textarea text-primary-content textarea-primary" placeholder="Short description of your project"></textarea>
-        
-            <div class="card-actions justify-center">
-                <button class="btn btn-primary btn-active hover:bg-primary mt-4" type="submit">Create Project</button><br>
-            </div>
-            </form>  
-            </div>
-        </div>
-
-    </div>
-
-</div>
-
- <div class="mt-12">
-    <h2 class="card-title mb-8 justify-center" style="font-size:28px">Project Summary</h2>
-      <div class="flex justify-center">
-        <div style="width:75%;"> 
-            <canvas id="chart"></canvas> 
-        </div> 
       </div>
+    </div>
+  </div>
+
+  <div class="bg-base-300 card-container">
+    <div class="bg-base-100 shadow-xl card-body">
+      <div class="card-body">
+        <h2 class="card-title" style="font-size:28px">
+          Create a new Project
+        </h2>
+        <form class="form-control w-full max-w-xs new-project-form">
+          <label class="label" for="new-project-name">
+            <span class="label-text">
+              Project Name
+            </span>
+          </label>
+          <input  id="new-project-name" type="text" placeholder="Name of your project" class="input input-bordered text-primary-content input-primary w-full max-w-xs" />
+          <label class="label" for="new-project-description">
+            <span class="label-text">
+              Description
+            </span>
+          </label>
+          <textarea id="new-project-description" height="50px" class="textarea text-primary-content textarea-primary" placeholder="Short description of your project"></textarea>
+    
+          <div class="card-actions justify-center">
+            <button class="btn btn-primary btn-active hover:bg-primary mt-4" type="submit">Create Project</button><br>
+          </div>
+        </form>  
+      </div>
+    </div>
+  </div>
+
 </div>
 
+ <div class="mt-12 project-summary">
+    <h2 class="card-title mb-8 justify-center" style="font-size:28px">
+      Project Summary
+    </h2>
+    <div class="chart">
+      <div style="width:75%;"> 
+        <canvas id="chart"></canvas> 
+      </div> 
+    </div>
+  </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.js"></script> 
-      <script type="text/javascript">
-    window.onload=function(){
-var canvas = document.getElementById('chart');
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.js"></script> 
+<script type="text/javascript">
 
+window.onload=function(){
+  var canvas = document.getElementById('chart');
 
-
-new Chart(canvas, {
-  type: 'bar',
-  data: {
-    labels: ['Project 1', 'Project 2', 'Project 3', 'Project 4', 'Project 5'],
-    datasets: [{
-      label: 'Time Spent',
-      yAxisID: 'A',
-      data: [32, 22, 18, 28, 12],
-      backgroundColor:'rgba(113, 70, 242, 0.9)',
-    }, {
-      label: 'Wages Earned',
-      yAxisID: 'B',
-      data: [1280, 880, 720, 1120, 480],
-      backgroundColor:'rgba(31, 255, 90, 0.8)',
-      hoverBackgroundColor: 'rgba(26, 199, 72, 0.8)'
-    }]
-  },
-  options: {
-    title: {
-      display: false,
-      text: 'Project Summary',
-      fontSize: 24,
-    },
-    scales: {
-      yAxes: [{
-        id: 'A',
-        type: 'linear',
-        position: 'left',
-        gridLines: {
-          display: false,},
-        ticks: {
-          min: 0
-        },
-        scaleLabel: {
-            display: true,
-            labelString: 'Hours Spent on Project (Hours)',
-          },
+  new Chart(canvas, {
+    type: 'bar',
+    data: {
+      labels: ['Project 1', 'Project 2', 'Project 3', 'Project 4', 'Project 5'],
+      datasets: [{
+        label: 'Time Spent',
+        yAxisID: 'A',
+        data: [32, 22, 18, 28, 12],
+        backgroundColor:'rgba(113, 70, 242, 0.9)',
       }, {
-        id: 'B',
-        type: 'linear',
-        position: 'right',
-        gridLines: {
-          display: false,},
-          scaleLabel: {
-            display: true,
-            labelString: 'Wages Earned from Project ($)',
-          },
-        ticks: {
-          min: 0,
-          callback: function(value, index, ticks) {
-                        return '$' + value;
-        }}
+        label: 'Wages Earned',
+        yAxisID: 'B',
+        data: [1280, 880, 720, 1120, 480],
+        backgroundColor:'rgba(31, 255, 90, 0.8)',
+        hoverBackgroundColor: 'rgba(26, 199, 72, 0.8)'
       }]
+    },
+    options: {
+      title: {
+        display: false,
+        text: 'Project Summary',
+        fontSize: 24,
+      },
+      scales: {
+        yAxes: [{
+          id: 'A',
+          type: 'linear',
+          position: 'left',
+          gridLines: {
+            display: false,},
+          ticks: {
+            min: 0
+          },
+          scaleLabel: {
+              display: true,
+              labelString: 'Hours Spent on Project (Hours)',
+            },
+        }, {
+          id: 'B',
+          type: 'linear',
+          position: 'right',
+          gridLines: {
+            display: false,},
+            scaleLabel: {
+              display: true,
+              labelString: 'Wages Earned from Project ($)',
+            },
+          ticks: {
+            min: 0,
+            callback: function(value, index, ticks) {
+                          return '$' + value;
+          }}
+        }]
+      }
     }
-  }
-});
-    }
+  });
+}
 
-    Chart.Legend.prototype.afterFit = function() {
-    this.height = this.height + 50;
+Chart.Legend.prototype.afterFit = function() {
+  this.height = this.height + 50;
 };
 
-      </script> 
+</script> 
 <script src="/js/profile.js"></script>
